--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,20 @@
+@import url("https://fonts.googleapis.com/css2?family=Nabla&display=swap");
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+/* 
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+} */
+
+
+.cursive {
+  font-family: "Nabla", cursive;
 }
 
 a {
